# sourbar

./: .gitignore  .gitmodules  CMakeLists.txt  config
include/: config.h  log.h  modules.h  subprocess.h
src/: config.cc  main.cc  main.cpp  modules.cc  modules_lemonbar.cc  subprocess.cc
